--- a/SportsNoteAPI/src/main/resources/application.properties
+++ b/SportsNoteAPI/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+origins=http://localhost:4200
